RESOLVED FIXED276225
[WPE][WebDriver] WebKitWebView warn if current WebContext doesn't allow automation for automated views
https://bugs.webkit.org/show_bug.cgi?id=276225
Summary [WPE][WebDriver] WebKitWebView warn if current WebContext doesn't allow autom...
Lauro Moura
Reported 2024-07-04 07:02:11 PDT
The usual way of setting up automation in WebKitGTK/WPEWebkit is to first call `webkit_web_context_is_automation_allowed` and then create `WebKitWebViews` with `is-controlled-by-automation` enabled. This ensures the `WebKitWebContext` will create ephemeral network sessions (and thus ephemeral data directories) for the automated sessions, as usually expected. For now, we could just put a warning/critical message, without enforcing it. In another commit, we can start enforcing the ephemeral sessions while providing a capability/flag to allow persistent automated sessions.
Attachments
Lauro Moura
Comment 1 2024-07-04 07:28:57 PDT
EWS
Comment 2 2024-07-05 11:19:44 PDT
Committed 280695@main (1a21c42e7e1c): <https://commits.webkit.org/280695@main> Reviewed commits have been landed. Closing PR #30491 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.