[WPE][WebDriver] WebKitWebView warn if current WebContext doesn't allow automation for automated views https://bugs.webkit.org/show_bug.cgi?id=276225

Reviewed by Carlos Garcia Campos.

Put just a warning for now, to avoid breaking current behavior. In a
future commit we can enforce this behavior and add a capability/flag to
allow the WebDriver client request a persistent data directory (e.g. for
repeatedly testing heavy PWA or pages with huge resources)

* Source/WebKit/UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewConstructed): Add warning
* Tools/MiniBrowser/wpe/main.cpp:
(activate): Enable automation before creating the first view

Canonical link: https://commits.webkit.org/280695@main